--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="first.css">
 </head>
-<body>
-    <header>
 
-    </header>
-    <main>
-
-    </main>
-    <footer>
+<body class="azeret-mono-normal">
+    <div class="first-part">
+        <img class="first-img" src="assets/Group.png" alt="">
+        <h2 class="first-descrition">
+            "In the near future, I hope to become a Developer."
+        </h2>
+        <h6 class="first-sub-description">
+            My Name is Md Nasim. I always try to become different from others. Now I have a chance to do it so. 
+        </h6>
+        <button class="contact-me">Contact with me</button>
         
-    </footer>
+    </div>
+    <div>
+        <h3 first-question>
+            Why Web Development??
+        </h3>
+        <p>I like to do new thing daily. So I thik in Web development, I can do as much as I could</p>
+    </div>
 </body>
+
 </html>
